- Implemented the unit test "oor_bin_copies_test" to actually check if the
  underflow, etc. properties of ndhist return deep copies.

- If the bin content array is an object array, the underflow, overflow,
  underflow_squaredweights, and overflow_squaredweights properties of ndhist
  make a deepcopy (using BoostNumpy's ndarray.deepcopy method) of their returned
  ndarrays, so that the objects are also copied.

- The properties
      - underflow,
      - overflow,
      - underflow_entries,
      - overflow_entries,
      - underflow_squaredweights,
      - overflow_squaredweights
  of ndhist return copies of the underflow and overflow bins, because if the
  extendable axes extend, those out-of-range bins will become core bins. In case
  the user really needs views into the internal bin content array, one should
  use the corrsponding *_view properties, e.g. underflow_view.

- Reserved (virtual) under- and overflow bins within the front and back
  capacities of the bin content array for extendable axes. So an actual view
  into the bin content array can be created for ndarrays returned by the
  underflow and overflow properties of ndhist.
  The under and overflow bins of non-extendable axes are now also included in
  the bin content array. So the binentries, bincontent and squaredweights
  properties are creating a view into the bin content array showing only the
  core array, i.e. without the under- and overflow bins.

- Adjusted the fill method to the new oor bin scheme. It still needs to be
  tested.

- Integrated get_noor_bin into bin_utils as get_bin_by_indices function.

- Renamed flush_oor_cache function to flush_value_cache.

- Renamed the oor_fill_record_stack template to value_cache.

- Renamed detail::nd_traits to detail::specific_nd_traits, which is a better
  name in combination with the generic_nd_traits template.

- Renamed bin_value_type_traits to bin_iter_value_type_traits and moved it from
  ndhist.cpp into its own header file.
